--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>JavaScript AJAX</title>
+    <title>JavaScript_9</title>
     <script src="Application.js"></script>
 </head>
 
 <body>
-<h1>AJAX methods</h1>
 <form>
-    <input id="Surname" type="text" placeholder="Фамилия" onkeyup="check()"><br><br>
-    <input id="Name" type="text" placeholder="Имя" onkeyup="check()"><br><br>
-    <input id="Age" type="text" placeholder="Возраст" onkeyup="check()" onblur="validateAge()"><br><br>
-    <input id="Address" type="text" placeholder="Место проживания" onkeyup="check()"><br>
-    <p id="Message">Для отправки формы необходимо корректно заполнить все поля!</p>
+    <input id="Surname" type="text" placeholder="Прізвище" onkeyup="check()"><br><br>
+    <input id="Name" type="text" placeholder="Імя" onkeyup="check()"><br><br>
+    <input id="Age" type="text" placeholder="Вік" onkeyup="check()" onblur="validateAge()"><br><br>
+    <input id="Address" type="text" placeholder="Місце проживання" onkeyup="check()"><br>
+    <p id="Message">Необхідно коректно заповнити всі поля перед відправкою</p>
     <input id="AjaxGET" type="button" value="Ajax GET" onclick="sendDataByGetMethod()" disabled>
     <input id="AjaxPOST" type="button" value="Ajax POST" onclick="sendDataByPostMethod()" disabled>
-    <input type="button" value="Clear Fields" onclick="clearFields()">
 </form>
 
 <style>
